[package]
name = "quiklang"
version = "0.1.0"
edition = "2021"

[package.metadata]
quiklang-vm-version = 1

[dependencies]
byteorder = "1.5.0"
colored = "2.1.0"
criterion = "0.5.1"
dialoguer = "0.11.0"
lazy_static = "1.5.0"
libloading = "0.8.5"
rustyline = "9.0.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
toml = "0.8.19"

[lib]
name = "quiklang"
path = "src/lib.rs"

[[bin]]
name = "quiklang"
path = "src/bin/quiklang.rs"

[[bin]]
name = "quiklangc"
path = "src/bin/quiklangc.rs"

[[bin]]
name = "quiklang-to-bin"
path = "src/bin/quiklang-to-bin.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[[bench]]
name = "tokenize_factorial"
harness = false

[[bench]]
name = "tokenize_large"
harness = false

[[bench]]
name = "rust_factorial"
harness = false

[[bench]]
name = "bytecode_decode"
harness = false

[[bench]]
name = "bytecode_encode"
harness = false
